--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,13 @@ services:
     depends_on:
       - postgres
 
+  redis:
+    image: redis:alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
 volumes:
   postgres_data:
