--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
 
   redis:
     image: redis:alpine
-    container_name: redis
+    container_name: redis_auth
     ports:
       - "6379:6379"
     volumes:
@@ -31,3 +31,4 @@ services:
 
 volumes:
   postgres_data:
+  redis_data:
