--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         
-      - name: Install SSH key
+      - name: Install SSH key and dependencies
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
+          
+      - name: Install rsync
+        run: sudo apt-get update && sudo apt-get install -y rsync
           
       - name: Transfer files to remote server
         run: |
