Trying to run ci pipeline pt. 6

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,13 +14,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         
-      - name: Install SSH key...
+      - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
           
-      - name: Transfer files to remote server...
+      - name: Transfer files to remote server
         run: |
           rsync -avz -e "ssh -o StrictHostKeyChecking=no" \
             --exclude='.git/' \
@@ -28,9 +28,19 @@ jobs:
             --exclude='atlas.hcl' \
             ./ nofuture@${{ secrets.SSH_HOST }}:~/project/
             
-      - name: Run tests on remote server...
+      - name: Run tests on remote server
         run: |
-          ssh -o StrictHostKeyChecking=no nofuture@${{ secrets.SSH_HOST }} \
-            "cd ~/project && \
-            export PATH=\$PATH:/usr/local/go/bin && \
-            make docker-test"
+          ssh -o StrictHostKeyChecking=no nofuture@${{ secrets.SSH_HOST }} << 'EOF'
+            cd ~/project
+            export PATH=$PATH:/usr/local/go/bin
+            
+            docker-compose up -d
+            
+            while ! docker-compose exec -T postgres pg_isready -U gorm -d auth; do
+              sleep 1
+            done
+            
+            make docker-test || true
+            
+            docker-compose down -v
+          EOF
