--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,8 +7,14 @@ services:
       POSTGRES_DB: auth
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./migrations:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U gorm -d auth" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   pgadmin:
     image: dpage/pgadmin4
@@ -28,6 +34,16 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+
+  auth_service:
+    build: .
+    ports:
+      - "50051:50051"
+    environment:
+      CONFIG_PATH: /app/config/local.docker.yml
+    depends_on:
+      - postgres
+      - redis
 
 volumes:
   postgres_data:
