--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,6 +15,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - auth-network
 
   pgadmin:
     image: dpage/pgadmin4
@@ -26,6 +28,8 @@ services:
       - "5050:80"
     depends_on:
       - postgres
+    networks:
+      - auth-network
 
   redis:
     image: redis:alpine
@@ -34,6 +38,8 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - auth-network
 
   auth_service:
     build: .
@@ -42,9 +48,18 @@ services:
     environment:
       CONFIG_PATH: /app/config/local.docker.yml
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    networks:
+      - auth-network
 
 volumes:
   postgres_data:
   redis_data:
+
+
+networks:
+  auth-network:
+    driver: bridge
