Add rm -rf api in ci pipeline for force protos update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,5 +45,7 @@ jobs:
             
             docker-compose -f docker-compose.prod.yml down -v
 
+            rm -rf api
+
             exit $TEST_EXIT_CODE
           EOF
